# mleko

./: .buildinfo  .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  contributing.html  genindex.html  index.html  license.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: changelog.doctree  contributing.doctree  index.doctree  license.doctree  usage.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/mleko/: index.doctree
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: constraints.txt  documentation.yml  release.yml  repolint.yml  semantic_pull_request.yml  tests.yml
_sources/: index.md.txt  usage.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/mleko/: index.rst.txt
_templates/: CHANGELOG.md.j2
autoapi/: index.html
autoapi/mleko/: index.html
autoapi/mleko/cache/: index.html
autoapi/mleko/dataset/: index.html
autoapi/mleko/model/: index.html
autoapi/mleko/pipeline/: index.html
autoapi/mleko/utils/: index.html
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
examples/: Australia Rain Classification.ipynb  Experiment.ipynb  Titanic.ipynb
mleko/: __init__.py
mleko/cache/: __init__.py  cache_mixin.py  lru_cache_mixin.py
mleko/cache/fingerprinters/: __init__.py  base_fingerprinter.py  callable_source_fingerprinter.py  csv_fingerprinter.py  dict_fingerprinter.py  json_fingerprinter.py  optuna_pruner_fingerprinter.py  optuna_sampler_fingerprinter.py  vaex_fingerprinter.py
mleko/cache/format/: __init__.py  vaex_arrow_cache_format_mixin.py  vaex_cache_format_mixin.py
mleko/cache/handlers/: __init__.py  base_cache_handler.py  joblib_cache_handler.py  json_cache_handler.py  pickle_cache_handler.py  string_cache_handler.py  vaex_cache_handler.py
mleko/dataset/: __init__.py  data_schema.py
mleko/dataset/convert/: __init__.py  base_converter.py  csv_to_vaex_converter.py
mleko/dataset/converter/: __init__.py  csv_to_vaex_converter.py
mleko/dataset/converters/: __init__.py  base_converter.py  csv_to_vaex_converter.py
mleko/dataset/data_sources/: base_data_source.py  kaggle_data_source.py  s3_data_source.py
mleko/dataset/export/: __init__.py  base_exporter.py  local_exporter.py  s3_exporter.py
mleko/dataset/feature_select/: __init__.py  base_feature_selector.py  composite_feature_selector.py  invariance_feature_selector.py  missing_rate_feature_selector.py  pearson_correlation_feature_selector.py  standard_deviation_feature_selector.py  variance_feature_selector.py
mleko/dataset/filter/: __init__.py  base_filter.py  expression_filter.py  imblearn_resampling_filter.py
mleko/dataset/ingest/: __init__.py  base_ingester.py  kaggle_ingester.py  s3_ingester.py
mleko/dataset/split/: __init__.py  base_splitter.py  expression_splitter.py  random_splitter.py
mleko/dataset/splitter/: expression_splitter.py  random_splitter.py
mleko/dataset/splitters/: base_splitter.py  expression_splitter.py  random_splitter.py
mleko/dataset/transform/: __init__.py  base_transformer.py  composite_transformer.py  expression_transformer.py  frequency_encoder_transformer.py  label_encoder_transformer.py  max_abs_scaler_transformer.py  min_max_scaler_transformer.py
mleko/model/: __init__.py  base_model.py  lgbm_model.py
mleko/model/tune/: __init__.py  base_tuner.py  optuna_tuner.py
mleko/pipeline/: __init__.py  data_container.py  pipeline.py  pipeline_step.py
mleko/pipeline/steps/: __init__.py  convert_step.py  export_step.py  feature_select_step.py  filter_step.py  ingest_step.py  model_step.py  split_step.py  transform_step.py  tune_step.py
mleko/utils/: __init__.py  custom_logger.py  decorators.py  file_helpers.py  s3_helpers.py  tqdm_helpers.py  vaex_helpers.py
src/mleko/: __init__.py  __main__.py
src/mleko/cache/: __init__.py  cache.py  fingerprinters.py
src/mleko/data/: __init__.py  converters.py  sources.py  splitters.py
src/mleko/pipeline/: __init__.py  data_container.py  pipeline.py  pipeline_step.py
src/mleko/utils/: __init__.py  custom_logger.py  decorators.py  file_helpers.py  tqdm.py  vaex.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: __init__.py  conftest.py  test_main.py
tests/cache/: __init__.py  test_cache.py  test_cache_mixin.py  test_fingerprinters.py  test_lru_cache_mixin.py
tests/cache/fingerprinters/: __init__.py  test_callable_source_fingerprinter.py  test_csv_fingerprinter.py  test_json_fingerprinter.py  test_optuna_pruner_fingerprinter.py  test_optuna_sampler_fingerprinter.py  test_vaex_fingerprinter.py
tests/cache/format/: __init__.py  test_vaex_arrow_cache_format_mixin.py
tests/data/: __init__.py  test_converters.py  test_sources.py  test_splitters.py
tests/data/sources/: __init__.py  test_base_data_source.py  test_kaggle_data_source.py  test_s3_data_source.py
tests/dataset/: __init__.py  test_data_schema.py
tests/dataset/convert/: __init__.py  test_base_converter.py  test_csv_to_vaex_converter.py
tests/dataset/converters/: __init__.py  (+2 more)
tests/model/: __init__.py  test_base_model.py  test_lgbm_model.py
tests/pipeline/: __init__.py  test_data_container.py  test_pipeline.py  test_pipeline_step.py
tests/utils/: __init__.py  test_custom_logger.py  test_decorators.py  test_file_helpers.py  test_tqdm.py  test_tqdm_helpers.py  test_vaex.py  test_vaex_helpers.py
(+305 files in other folders)
