[tool.poetry]
name = "mleko"
version = "0.5.0"
description = "ML-Ekosystem"
authors = ["Erik Båvenstrand <erik@bavenstrand.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ErikBavenstrand/mleko"
repository = "https://github.com/ErikBavenstrand/mleko"
documentation = "https://mleko.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/ErikBavenstrand/mleko/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "3.10.* || 3.9.* || 3.8.*"
boto3 = "^1.26.91"
botocore = "^1.29.91"
tqdm = "^4.65.0"
vaex = "^4.16.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
boto3-stubs = {extras = ["s3"], version = "^1.26.91"}
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
moto = "^4.1.4"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pytest-mock = "^3.10.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
typeguard = ">=2.13.3"
myst-parser = {version = ">=0.16.1"}
ipykernel = "^6.21.3"
mypy-boto3-s3 = "^1.26.116"
nox = "^2023.4.22"
nox-poetry = "^1.0.2"
sphinx-autodoc-typehints = "^1.23.0"
sphinx-autoapi = "^2.1.0"
python-semantic-release = "^7.33.3"

[tool.coverage.paths]
source = ["mleko", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = false
source = ["mleko"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["pragma: no cover", "raise NotImplementedError", '"""', "self._cached_execute"]

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
use_parentheses = true
include_trailing_comma = true

[tool.black]
line-length = 120

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true


[[tool.mypy.overrides]]
module = [
    "vaex.*",
    "tqdm.*",
    "boto3.*",
    "botocore.*",
    "pyarrow.*",
    "requests.*",
    "sklearn.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_variable = "mleko/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
version_source = "tag"
commit_version_number = true
tag_commit = true
upload_to_pypi = false
upload_to_release = false
hvcs = "github"
commit_message = "chore(release): release {version}"
changelog_sections = "feature,fix,breaking,performance,documentation,refactor,style,test,build,ci,chore"
