[tool.poetry]
name = "mleko"
version = "2.2.0"
description = "ML-Ekosystem"
authors = ["Erik Båvenstrand <erik@bavenstrand.se>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/klarna-incubator/mleko"
repository = "https://github.com/klarna-incubator/mleko"
documentation = "https://mleko.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/klarna-incubator/mleko/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11.dev0"
boto3 = "^1.26.91"
botocore = "^1.29.91"
tqdm = "^4.65.0"
vaex = "^4.16.0"
scikit-learn = "^1.2.2"
joblib = "^1.3.1"
pandas = "^2.0.3"
lightgbm = "^4.0.0"
optuna = "^3.3.0"
optuna-dashboard = "^0.14.0"
urllib3 = ">=1.25.4,<1.27" # workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
imbalanced-learn = "^0.12.0"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
boto3-stubs = {extras = ["s3"], version = "^1.26.91"}
coverage = {extras = ["toml"], version = ">=6.2"}
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
moto = "^4.1.4"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pytest-mock = "^3.10.0"
python-semantic-release = "^8.7.0"
ipykernel = "^6.21.3"
safety = ">=1.10.3"
pyright = "^1.1.316"
sphinx = "7.1.2"
furo = "^2023.9.10"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.2"
sphinx-autoapi = "^3.0.0"
sphinx-autobuild = ">=2021.3.14"

[tool.coverage.paths]
source = ["mleko", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = false
source = ["mleko"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["pragma: no cover", "raise NotImplementedError", '"""', "pass"]

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
use_parentheses = true
include_trailing_comma = true

[tool.black]
line-length = 120

[tool.pyright]
include = ["mleko"]
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "mleko/__init__.py:__version__",
    "docs/conf.py:version",
]
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_message = "chore(release): release {version}"
